--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,15 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "~52.0.43",
+    "expo-camera": "~16.0.18",
+    "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9"
