--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
       "package": "com.anonymous.app"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
     "plugins": [
       "expo-router"
