--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-camera": "~16.0.18",
     "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.507.0",
     "nativewind": "^4.1.23",
     "react": "^18.3.1",
     "react-dom": "^19.1.0",
