--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack-ui/tooltip": "^0.1.44",
     "@legendapp/motion": "^2.4.0",
+    "@react-navigation/bottom-tabs": "^7.3.11",
     "@supabase/supabase-js": "^2.49.4",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.43",
     "expo-camera": "~16.0.18",
+    "expo-constants": "~17.0.8",
+    "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.507.0",
@@ -55,7 +58,8 @@
     "react-native": "0.76.9",
     "react-native-css-interop": "^0.1.22",
     "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
