--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^19.1.0",
     "react-native": "0.76.9",
     "react-native-css-interop": "^0.1.22",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
