--- a/package.json
+++ b/package.json
@@ -12,41 +12,12 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
-    "@gluestack-style/react": "^1.0.57",
-    "@gluestack-ui/accordion": "^1.0.14",
-    "@gluestack-ui/actionsheet": "^0.2.53",
-    "@gluestack-ui/alert": "^0.1.16",
-    "@gluestack-ui/alert-dialog": "^0.1.38",
-    "@gluestack-ui/avatar": "^0.1.18",
-    "@gluestack-ui/button": "^1.0.14",
-    "@gluestack-ui/checkbox": "^0.1.39",
-    "@gluestack-ui/config": "^1.1.20",
-    "@gluestack-ui/divider": "^0.1.10",
-    "@gluestack-ui/fab": "^0.1.28",
-    "@gluestack-ui/form-control": "^0.1.19",
-    "@gluestack-ui/icon": "^0.1.27",
-    "@gluestack-ui/image": "^0.1.17",
-    "@gluestack-ui/input": "^0.1.38",
-    "@gluestack-ui/link": "^0.1.29",
-    "@gluestack-ui/menu": "^0.2.43",
-    "@gluestack-ui/modal": "^0.1.41",
-    "@gluestack-ui/nativewind-utils": "^1.0.26",
-    "@gluestack-ui/overlay": "^0.1.22",
-    "@gluestack-ui/popover": "^0.1.49",
-    "@gluestack-ui/pressable": "^0.1.23",
-    "@gluestack-ui/progress": "^0.1.18",
-    "@gluestack-ui/radio": "^0.1.40",
-    "@gluestack-ui/select": "^0.1.31",
-    "@gluestack-ui/slider": "^0.1.32",
-    "@gluestack-ui/spinner": "^0.1.15",
-    "@gluestack-ui/switch": "^0.1.29",
-    "@gluestack-ui/textarea": "^0.1.25",
-    "@gluestack-ui/themed": "^1.1.73",
-    "@gluestack-ui/toast": "^1.0.9",
-    "@gluestack-ui/tooltip": "^0.1.44",
+    "@expo/vector-icons": "^14.1.0",
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/bottom-tabs": "^7.3.11",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/elements": "^2.5.2",
+    "@react-navigation/native": "^7.1.14",
     "@supabase/supabase-js": "^2.49.4",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.43",
@@ -55,19 +26,17 @@
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
-    "lucide-react-native": "^0.507.0",
-    "nativewind": "^4.1.23",
     "react": "^18.3.1",
     "react-dom": "^19.1.0",
     "react-native": "0.76.9",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
