--- a/app.json
+++ b/app.json
@@ -26,8 +26,6 @@
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
-    "plugins": [
-      "expo-router"
-    ]
+    "plugins": ["expo-router", "react-native-vision-camera"]
   }
 }
