--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.14",
     "@supabase/supabase-js": "^2.49.4",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.43",
-    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
@@ -36,6 +37,7 @@
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.7.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
